@@ -237,6 +237,10 @@ class InfoDialog(QDialog):
             row += 1
             self.ly_tool_widgets[name] = (l, w)
 
+        if sys.platform.startswith('darwin'):
+            self.alwaysUseShebang = QCheckBox()
+            grid.addWidget(self.alwaysUseShebang, row, 0, 1, 2)
+
         layout.addWidget(self.tab)
         layout.addWidget(widgets.Separator())
         b = self.buttons = QDialogButtonBox(self)
@@ -268,6 +272,8 @@ class InfoDialog(QDialog):
         self.tab.setTabText(1, _("Tool Commands"))
         for name, gui in self.toolnames():
             self.ly_tool_widgets[name][0].setText(gui)
+        if sys.platform.startswith('darwin'):
+            self.alwaysUseShebang.setText(_("Always use the tool's #! line"))
 
     def loadInfo(self, info):
         """Takes over settings for the dialog from the LilyPondInfo object."""
@@ -276,6 +282,8 @@ class InfoDialog(QDialog):
         self.auto.setChecked(info.auto)
         for name, gui in self.toolnames():
             self.ly_tool_widgets[name][1].setText(info.ly_tool(name))
+        if sys.platform.startswith('darwin'):
+            self.alwaysUseShebang.setChecked(info.alwaysUseShebang)
 
     def newInfo(self):
         """Returns a new LilyPondInfo instance for our settings."""
@@ -289,6 +297,8 @@ class InfoDialog(QDialog):
         info.auto = self.auto.isChecked()
         for name, gui in self.toolnames():
             info.set_ly_tool(name, self.ly_tool_widgets[name][1].text())
+        if sys.platform.startswith('darwin'):
+            info.alwaysUseShebang = self.alwaysUseShebang.isChecked()
         return info
 
 
